--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+      <div class="class1"></div>
+      <div class="class1"></div>
 </body>
 </html>
